--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     </parent>
     <groupId>guru.springframework</groupId>
     <artifactId>sfg-pet-clinic</artifactId>
-    <version>0.0.3</version>
+    <version>0.0.4-SNAPSHOT</version>
     <name>sfg-pet-clinic</name>
     <description>SFG Pet clinic</description>
 
@@ -56,7 +56,7 @@
 
     <scm>
         <developerConnection>scm:git:https://github.com/sudhakar-dhayalan/sfg-pet-clinic.git</developerConnection>
-      <tag>sfg-pet-clinic-0.0.3</tag>
+      <tag>HEAD</tag>
   </scm>
 
 </project>
